projects layout bug fixed

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -46,34 +46,114 @@
   }
 }
 
+@media screen and (min-width:991px) {
+  .banner-left {
+    opacity: 0;
+    transform: translate3d(0, 100px, 0);
+    transition:0.5s all ease-in-out;
+  }
 
+  .banner-right {
+    opacity: 0;
+    transform: translate3d(0, -100px, 0);
+    transition:0.5s all ease-in-out;
+  }
+
+  .banner-fade-in {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@media screen and (max-width: 990px) {
+  :root {
+    font-size: 14px;
+  }
+
+
+  .banner-content {
+    padding-top: 3rem;
+    flex-direction: column-reverse;
+    height: auto;
+
+    .banner-left {
+      padding-top: 4rem;
+      padding-bottom: 17%;
+      padding-left: 0;
+      text-align: center;
+    }
+
+    .banner-right {
+      padding-top: 5rem;
+      order: 1;
+
+      img {
+        width: 21rem;
+        height: 21rem;
+      }
+    }
+  }
 
     // input[type=submit] {
       //   margin-left: 80%;
       // }
-.project-left, .project-right {
-  padding: 0;
+  .project-left, .project-right {
+    padding: 0;
+  }
+
+  .projects-container {
+    margin-top: 18%;
+  }
+
+  .project-1 {
+    height: auto;
+    flex-direction: column;
+    padding-bottom: 5rem;
+  }
+
+  .project-2 {
+    flex-direction: column-reverse;
+    height: auto;
+    padding-bottom: 5rem;
+  }
+
+  .project-3 {
+    height: auto;
+    flex-direction: column;
+  }
 }
 
-.projects-container {
-  margin-top: 18%;
-}
+@media screen and (max-width: 768px) {
+  :root {
+    font-size: 13px;
+  }
 
-.project-1 {
-  height: auto;
-  flex-direction: column;
-  padding-bottom: 5rem;
-}
+  .navbar {
+    display: flex;
 
-.project-2 {
-  flex-direction: column-reverse;
-  height: auto;
-  padding-bottom: 5rem;
-}
+    img {
+      zoom: 7%
+    }
+  }
 
-.project-3 {
-  height: auto;
-  flex-direction: column;
+  .main-nav__list {
+    display: none;
+  }
+
+  #navbar-language-toggler {
+    display: none;
+  }
+
+  // #sidepanel-language-toggler {
+
+  // }
+
+  .navbar .navbar-menu-icon {
+    // padding: 2% 7% 0% 0%;
+    font-size: 163%;
+    float: right;
+    display: flex;
+  }
 }
 
 @media screen and (max-width: 683px) {
